student/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atpdeployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demoapp
  template:
    metadata:
      labels:
        app: demoapp
    spec:
      containers:
      - name: atpdemocontainer
        image: gcr.io/omega-booster-422417-n5/student
        ports:
        - containerPort: 8080
